<resources>
    <string name="app_name">AlphaHDWallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="title_activity_confirm_send">ConfirmSendActivity</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="title_activity_backup_mnemonics">BackupMnemonicsActivity</string>
    <string name="title_activity_verify_mnemonics">VerifyMnemonicsActivity</string>
    <string name="title_activity_wallet_detail">WalletDetailActivity</string>



    <!--launch-->
    <string name="launch_title">The First "Profit-Ssharing" Game System That Spans The Blockchain Ecosystem</string>


    <!--backup-->
    <string name="backup_"></string>
    <string name="backup_next">Next</string>
    <string name="backup_main_tips">Backup Phrase</string>
    <string name="backup_tips_line1">These 12 words are the only way to restore your ALLBET.</string>
    <string name="backup_tips_line2">Save them somewhere safe and secret.</string>
    <string name="backup_copy">Copy</string>
    <string name="backup_input_wallet_name">Name</string>


    <!--confirmSend-->
    <string name="confirm_send_"></string>
    <string name="confirm_send_title">Confirm</string>
    <string name="confirm_send_from">From</string>
    <string name="confirm_send_to">To</string>
    <string name="confirm_send_gas">GAS</string>
    <string name="confirm_send_senior">Advanced setup</string>
    <string name="confirm_send_btn">Send</string>

    <string name="confirm_send_gas_price">Gas Price （Gwei）</string>
    <string name="confirm_send_gas_limit">Gas Limit</string>
    <string name="confirm_send_data">Transaction Data</string>

    <string name="confirm_send_less_balance"> Lack of balance</string>
    <string name="confirm_send_gas_price_hint">请输入Gas price</string>
    <string name="confirm_send_gas_limit_hint">请输入Gas limit</string>
    <string name="confirm_send_data_hint">不需要携带数据</string>

    <string name="confirm_send_Limit_error">Gas Limit  最少需要设置为21000</string>


    <!--createOrImport-->
    <string name="create_or_import_"></string>

    <!--Import-->
    <string name="import_"></string>
    <string name="import_title">Import Ethereum</string>
    <string name="import_mnemonics">Phrase</string>
    <string name="import_keystore">Keystore</string>
    <string name="import_private">Private key</string>
    <string name="import_input_mnemonics_tips">Backup Phrase</string>
    <string name="import_input_keystore_tips">Keystore Json</string>
    <string name="import_input_private_tips">Private key</string>
    <string name="import_input_wallet_name_tips">Name</string>
    <string name="import_input_wallet_keystore_password_tips">Password</string>
    <string name="import_private_key_tips">Typically 64 alphanumeric characters</string>
    <string name="import_keystore_tips">Several lines of text beginning with “{...}” plus the password you used to encrypy it</string>
    <string name="import_mnemonics_tips">Typically 12(sometimes 24)words separated by single spaces</string>
    <string name="import_btn_next">Import</string>

    <!--ManagerAccounts-->
    <string name="manager_accounts_"></string>
    <string name="manager_accounts_title">Wallets</string>
    <string name="manager_accounts_btn_import">Import wallet</string>
    <string name="manager_accounts_btn_create">Create wallet</string>

    <!--receiver-->
    <string name="receiver_"></string>
    <string name="receiver_title">Receive ETH</string>
    <string name="receiver_save_code">Save QR code</string>
    <string name="receiver_eth_address">My Address to Receive ETH</string>
    <string name="receiver_copy_address">Copy Address</string>
    <string name="receiver_tips">Tips： If you deposit ETH to participate ICO and ICO tokens will be distributed to your deposit address, Please don’t withdraw ETH to it or you won’t get your ICO tokens.</string>

    <!--send-->
    <string name="send_"></string>
    <string name="send_title">Send ETH</string>
    <string name="send_receiver_address">Recipient Address</string>
    <string name="send_amount">ETH Amount</string>
    <string name="send_has_amount">Available  Send:  </string>
    <string name="send_btn_send">Send</string>
    <string name="send_btn_send_addresss_error">Address error</string>
    <string name="send_btn_send_amount_error">Lack of balance</string>

    <!--verifyMnemonics-->
    <string name="verify_mnemonics_"></string>
    <string name="verify_mnemonics_verify">Verify Backup Phrase</string>
    <string name="verify_mnemonics_tips">Tap the words to put them next to each other in the correct order.</string>
    <string name="verify_mnemonics_next">Done</string>
    <string name="verify_mnemonics_error_tips">Invalid order.Try again!</string>
    <string name="verify_mnemonics_true_tips">Well Done！</string>
    <!--Wallet-->

    <string name="wallet_account_"></string>
    <string name="wallet_no_account_create">CREATE WALLET</string>
    <string name="wallet_no_account_import">IMPORT WALLET</string>

    <string name="wallet_item_wallet">WALLET</string>
    <string name="wallet_item_my">ME</string>

    <string name="wallet_account_title">ETH</string>
    <string name="wallet_account_btn_send">Send</string>
    <string name="wallet_account_btn_receiver">Receiver</string>
    <string name="wallet_account_transaction_record">Transaction Record</string>
    <string name="wallet_account_transaction_all">All</string>
    <string name="wallet_account_transaction_receiver">Receive</string>
    <string name="wallet_account_transaction_send">Send</string>
    <string name="wallet_account_account_no_transaction">No Transactions Yet！</string>

    <!--由于 Wallet  是-->

    <!--WalletDetail-->
    <string name="wallet_detail_"></string>
    <string name="wallet_detail_title">Wallet</string>
    <string name="wallet_detail_save">Save</string>
    <string name="wallet_detail_wallet_name">Name</string>
    <string name="wallet_detail_export_private">Export Private Key</string>
    <string name="wallet_detail_export_keystore">Export Keystore</string>
    <string name="wallet_detail_export_mnemonics">Export Backup Keystire</string>
    <string name="wallet_detail_delete_wallet">Delete Wallet</string>

    <string name="wallet_detail_input_password">Please Input Password</string>
    <string name="wallet_detail_input_cancel">Cancel</string>
    <string name="wallet_detail_input_error">Invalid Password</string>
    <string name="wallet_detail_input_confirm">Done</string>
    <string name="wallet_detail_input_ok">OK</string>

    <!--web3-->



    <!--Tools-->
    <string name="date_year">-</string>
    <string name="date_mounth">-</string>
    <string name="date_day">-</string>

    <string name="date_hour">:</string>
    <string name="date_min">:</string>

    <!--Tost-->
    <string name="has_copied">Already copied to the pasteboard</string>
    <string name="has_savedToAlbum">Already saved to album</string>
    <string name="address_formatError">Incorrect address format</string>
    <string name="import_account_error_exist">The account has been imported</string>
    <string name="import_account_error_input">Error Information</string>
    <string name="import_account_success">Import Success</string>
</resources>
