<?xml version="1.0" encoding="utf-8"?>
<com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff5f8ff"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:background="#295EF7"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/statusBarSize"
        >
        <FrameLayout
            android:id="@+id/lay_back"
            android:layout_width="wrap_content"
            android:layout_height="25dp">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="9dp"
                android:layout_height="15dp"
                android:layout_marginStart="21dp"
                android:background="@drawable/ic_title_back_white"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_title"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/ic_share"/>
    </RelativeLayout>
    <com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
         android:layout_gravity="center_horizontal"

        app:layout_marginTopPercent="3%"
        app:layout_widthPercent="90%">
        <ImageView
            android:id="@+id/iv_address_code"
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/textBlack"
            app:layout_marginTopPercent="6%"/>


        <Button
            android:id="@+id/btn_share_pic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:textColor="#393A50"
            android:background="@drawable/bg_color_dae6ff_side"
            app:layout_heightPercent="4%"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/receiver_save_code"
            app:layout_marginTopPercent="3%"
            android:layout_gravity="center_horizontal"/>





        <TextView
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/receiver_eth_address"
            android:textColor="#494A60"
            app:layout_marginTopPercent="6%"
            />

        <TextView
            android:id="@+id/txt_address"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0x2fa986D54445a0c7e337A735Daf1121a4038474e"
            android:textColor="#323232"
            app:layout_marginTopPercent="3%"

            />




        <Button
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/receiver_copy_address"
            android:textColor="#393A50"
            android:textSize="12sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_color_dae6ff_side"
            app:layout_marginTopPercent="3%"
            app:layout_marginBottomPercent="4%"
            />
    </com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver_tips"
        android:textColor="#ff595a6e"
        android:textSize="12sp"
        app:layout_marginTopPercent="3%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="5%"
        android:layout_gravity="center_horizontal"
        />

</com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout>
