<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/trans"
    >

    <LinearLayout
        android:id="@+id/layout_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:background="@drawable/bg_dialog_verify_password">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_detail_input_password"
            android:textColor="#323232"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/edit_keystore_password"
            android:layout_marginTop="35dp"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#323232"
            android:inputType="textPassword"
            android:background="@drawable/bg_dialog_verify_password_edit"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeaf1ff"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wallet_detail_input_cancel"
                android:textColor="#323232"
                android:textSize="16sp"
                android:background="#ffffff"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffeaf1ff"/>
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wallet_detail_input_confirm"
                android:textColor="#323232"
                android:textSize="16sp"
                android:background="#ffffff"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>