<com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".functionModule.verifyMnemonics.VerifyMnemonicsActivity">
    <com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout
        android:id="@+id/lay_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/statusBarSize"
        app:layout_heightPercent = "5%"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            app:layout_marginTopPercent="50%"
            android:background="@drawable/ic_title_back_black"/>
    </com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_verify"
        app:layout_marginTopPercent="5%"
        app:layout_heightPercent = "5%"
        app:layout_widthPercent = "7%"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_mnemonics_verify"
        android:textSize="18sp"
        android:textColor="#4480FF"
        android:layout_gravity="center_horizontal"
        app:layout_marginTopPercent="2%"
        android:gravity="center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_mnemonics_tips"
        android:textSize="13sp"
        android:textColor="#323232"
        android:layout_gravity="center_horizontal"
        app:layout_marginTopPercent="8%"
        android:gravity="center_vertical"/>
    <com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent = "45%"
        app:layout_marginTopPercent = "2%"
        android:orientation="vertical"

        >
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/blue_700"
            >
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="#F1F6FF">
                <com.alphawizard.hdwallet.alphahdwallet.widget.MnemonicsView
                    android:id="@+id/mnemonicsView_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:background="#f1f6ff"
                    android:paddingTop="20dp"
                    android:paddingBottom="30dp"

                    app:layout_marginStartPercent="5%"
                    app:layout_marginEndPercent="5%"
                    />

            </android.support.percent.PercentFrameLayout>
        </android.support.percent.PercentFrameLayout>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent = "65%"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <LinearLayout
                android:id="@+id/layout_correct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_marginTopPercent="20%"
                android:visibility="gone"
                >

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/iv_correct"
                    android:background="@drawable/ic_correct"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    />
                <TextView
                    android:id="@+id/txt_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:text="@string/verify_mnemonics_true_tips"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:textColor="#4FFF37"
                    android:visibility="gone"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <com.alphawizard.hdwallet.alphahdwallet.widget.MnemonicsView
                android:id="@+id/mnemonicsView_no_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layout_marginTopPercent="4%"
                app:layout_marginStartPercent="5%"
                app:layout_marginEndPercent="5%"
                />

        </android.support.percent.PercentFrameLayout>
    </com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout>
    <TextView
        android:id="@+id/txt_input_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/verify_mnemonics_error_tips"
        android:layout_gravity="center"
        app:layout_marginTopPercent="2%"
        android:gravity="center"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient_blue"
        android:text="@string/verify_mnemonics_next"
        android:textColor="@color/textWhite"
        android:textSize="18sp"
        app:layout_heightPercent = "7%"
        app:layout_marginRightPercent="5%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="3%"
        app:layout_marginBottomPercent="6%"
        />
</com.alphawizard.hdwallet.alphahdwallet.widget.PercentLinearlayout>