<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#191A2A"
    android:id="@+id/layout_manager_wallet"
    tools:context=".functionModule.backupMnemonics.BackupMnemonicsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:background="#010110"
        android:paddingTop="@dimen/statusBarSize"
        app:titleTextAppearance="@style/TextAppearance.Title"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:text="@string/manager_accounts_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:background="#010110"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/statusBarSize">
        <FrameLayout
        android:id="@+id/lay_back"
        android:layout_width="wrap_content"
        android:layout_height="25dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:layout_marginStart="21dp"
            android:background="@drawable/ic_title_back_white"/>
    </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager_accounts_title"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            />
    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_accounts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <net.qiujuer.genius.ui.widget.Loading
            android:id="@+id/loading"
            android:layout_gravity="center"
            android:layout_width="@dimen/len_32"
            android:layout_height="@dimen/len_32"
            app:gBackgroundColor="@color/trans"
            app:gForegroundColor="@color/white"

            app:gAutoRun="false"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_import_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_color_393a50"
            android:text="@string/manager_accounts_btn_import"
            android:textColor="#ffffffff"
            android:textSize="16sp"
           />
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_color_6a89c4"
            android:text="@string/manager_accounts_btn_create"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            />

    </LinearLayout>
</LinearLayout>